Lot's of spacing issues fixed on bottom navigation and also implemented a new way to display different heights for each section. Another feature added is the easy ability to change the color of the background with ease

--- a/src/index.css
+++ b/src/index.css
@@ -137,7 +137,7 @@ code {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.3) !important;
-  /* max-width: 50%; */
+  max-width: 300px;
   min-width: 150px;
   color: var(--white) !important;
 }
@@ -185,17 +185,12 @@ code {
 {
   position: absolute;
   width: 100%;
-  height: 35rem;
+  /* height: 40rem; */
   background-color: var(--black-blue);
   left: 0;
   /* opacity: .5; */
   z-index: -4;
   transform: translateY(-3rem);
-}
-
-.background-color-one {
-  background-color: aquamarine !important;
-  opacity: 1 !important;
 }
 
 
@@ -209,7 +204,7 @@ code {
 {
   grid-column-start: 1;
   grid-column-end: 6;
-  border: 1px solid purple;
+  /* border: 1px solid purple; */
   justify-self: center;
 }
 
@@ -296,6 +291,75 @@ code {
 .text-color-class {
   color: green;
 }
+
+/* ----------------- Break out of container Heights ----------------- */
+
+.bg-height-17 {
+  height: 17rem;
+}
+
+.bg-height-20 {
+  height: 20rem;
+}
+
+.bg-height-25 {
+  height: 25rem;
+}
+
+.bg-height-30 {
+  height: 30rem;
+}
+
+.bg-height-35 {
+  height: 35rem;
+}
+
+.bg-height-40 {
+  height: 40rem;
+}
+
+.bg-height-45 {
+  height: 45rem;
+}
+
+.bg-height-50 {
+  height: 50rem;
+}
+
+/* ----------------- Break out of container Heights ----------------- */
+
+.bg-color-light-blue {
+  background-color: var(--light-blue) !important;
+}
+
+.bg-color-dark-blue {
+  background-color: var(--dark-blue) !important;
+}
+
+.bg-color-blue {
+  background-color: var(--blue) !important;
+}
+
+.bg-color-white {
+  background-color: var(--white) !important;
+}
+
+.bg-color-light-gray {
+  background-color: var(--light-gray) !important;
+}
+
+.bg-color-gray {
+  background-color: var(--gray) !important;
+}
+
+.bg-color-dark-gray {
+  background-color: var(--dark-gray) !important;
+}
+
+.bg-color-black-gray {
+  background-color: var(--black-gray) !important;
+}
+
 
 /* ----------------- Fonts ----------------- */
 
@@ -409,10 +473,15 @@ a {
   display: none;
 }
 
+.nav-bottom-container {
+  width: 100%;
+}
+
 .nav-bottom {
   display: flex;
   align-items: flex-end;
 }
+
 
 .nav-bottom-menu nav * {
   padding: .2rem 0;
@@ -495,6 +564,14 @@ a {
 
   .navigation > :first-child {
     padding-left: 1rem;
+  }
+
+  .nav-bottom-container .bg-height-17 {
+    height: 26rem;
+  }
+
+  .nav-bottom-container {
+    padding: 1rem !important;
   }
 
 
